primero cambios se crearon paginas

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -34,8 +34,8 @@ import Card from '../components/Card.astro';
 			</defs>
 		</svg>
 		<a href="./about"> About</a>
-		<a href="./blog">Blog</a>
-		<h1>Hola <span class="text-gradient">Jovanny</span></h1>
+		<a href="/">Inicio</a>
+		<h1>Hola este es el blog de  <span class="text-gradient">Jovanny</span></h1>
 		<p class="instructions">
 			To get started, open the directory <code>src/pages</code> in your project.<br />
 			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
