--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -33,13 +33,19 @@ import Card from '../components/Card.astro';
 				</linearGradient>
 			</defs>
 		</svg>
-		<a href="./about"> About</a>
-		<a href="./blog">Blog</a>
-		<h1>Hola <span class="text-gradient">Jovanny</span></h1>
-		<p class="instructions">
-			To get started, open the directory <code>src/pages</code> in your project.<br />
-			<strong>Code Challenge:</strong> Tweak the "Welcome to Astro" message above.
-		</p>
+
+<ul>
+    <li><a href="./blog">Blog</a></li>
+    <li><a href="/">Inico</a></li>
+</ul>        
+            <h1>Mi sitio Astro</h1>
+            <h1>Sobre mi</h1>
+            <h2>... ¡y mi nuevo sitio Astro!</h2>
+          
+            <p>Estoy trabajando en el tutorial introductorio de Astro. Esta es la segunda página de mi sitio web, ¡y es la primera que he construido yo mismo!</p>
+          
+            <p>Este sitio se irá actualizando a medida que vaya completando más partes del tutorial, ¡así que no dejes de visitarlo para ver cómo va mi viaje!</p>
+          
 		<ul role="list" class="link-card-grid">
 			<Card
 				href="https://docs.astro.build/"
